--- a/style.css
+++ b/style.css
@@ -2,11 +2,24 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   background-color: black;
   color: navajowhite;
+  font-size: 14px;
 }
 
 h1, h2, h3 {
   font-family: 'Fjalla One', sans-serif;
   color: #FFD540;
+}
+
+h1 {
+  font-size: 32px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 16px;
 }
 
 em {
