--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
+body {
   font-family: 'Source Sans Pro', sans-serif;
   background-color: black;
   color: navajowhite;
@@ -6,7 +6,7 @@ html, body {
 }
 
 h1, h2, h3 {
-  font-family: 'Fjalla One', sans-serif;
+  font-family: 'Indie Flower', cursive;
   color: #FFD540;
 }
 
@@ -23,5 +23,5 @@ h3 {
 }
 
 em {
-  font-family: 'Indie Flower', cursive;
+  
 }
