--- a/style.css
+++ b/style.css
@@ -6,22 +6,20 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: 'Indie Flower', cursive;
   color: #FFD540;
 }
 
 h1 {
+  font-family: 'Fjalla One', sans-serif;
   font-size: 32px;
 }
 
 h2 {
+  font-family: 'Indie Flower', cursive;
   font-size: 24px;
 }
 
 h3 {
+  font-family: 'Indie Flower', cursive;
   font-size: 16px;
-}
-
-em {
-  
 }
