--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   background-color: black;
   color: navajowhite;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 h1, h2, h3 {
@@ -12,6 +13,8 @@ h1, h2, h3 {
 h1 {
   font-family: 'Fjalla One', sans-serif;
   font-size: 32px;
+  border-bottom: 2px solid antiquewhite;
+  padding-bottom: 15px;
 }
 
 h2 {
@@ -22,4 +25,11 @@ h2 {
 h3 {
   font-family: 'Indie Flower', cursive;
   font-size: 16px;
+}
+
+.menu {
+  font-family: 'Fjalla One', sans-serif;
+  font-size: 32px;
+  border-bottom: 2px solid antiquewhite;
+  padding-bottom: 15px;   
 }
