--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 h2::before {
-  content: '#';  
+  content: '# ';  
 }
 
 h2 {
@@ -41,11 +41,13 @@ a::after {
 a:hover::before, a:focus::before {
   content: '<';
   margin-right: 15px;
+  transition: margin 0.2s;
 }
 
 a:hover::after, a:focus::after {
   content: '>';
   margin-left: 15px;
+  transition: margin 0.2s;
 }
 
 a:hover, a:focus {
