--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Share Tech Mono', sans-serif;
   background-color: black;
   color: #FFD540;
   font-size: 20px;
   box-sizing: border-box;
 }
 
+*, *:before, *:after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  padding: 15px;
+}
+
 h1 {
   font-size: 36px;
-  padding-bottom: 24px;
 }
 
 h2::before {
@@ -21,33 +30,37 @@ h2 {
 }
 
 a {
+  position: relative;
+  text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Share Tech Mono', sans-serif;
   color: #FFD540;
+  margin: 50px;
 }
 
 a::before {
+  position: absolute;
+  top: 0;
+  left: -25px;
   content: '<';
-  margin: 0;
-  transition: margin 0.4s;
+  transition: left 0.4s;
 }
 
 a::after {
+  position: absolute;
+  top: 0;
+  right: -25px;
   content: '>';
-  margin: 0;
-  transition: margin 0.4s;
+  transition: right 0.4s;
 }
 
 a:hover::before, a:focus::before {
-  content: '<';
-  margin-right: 15px;
-  transition: margin 0.2s;
+  left: -50px;
+  transition: left 0.2s;
 }
 
 a:hover::after, a:focus::after {
-  content: '>';
-  margin-left: 15px;
-  transition: margin 0.2s;
+  right: -50px;
+  transition: right 0.2s;
 }
 
 a:hover, a:focus {
@@ -60,5 +73,29 @@ a:hover, a:focus {
   border-bottom: 2px solid #FFD540;
   border-top: 2px solid #FFD540;
   padding: 15px 0;
-  text-align: center;
+  display: flex;
+  justify-content: stretch;
+  align-items: flex-center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.menu .title {
+  min-width: 450px;
+  text-align: left;
+  margin: 0;
+  border-right: 2px dashed #FFD540
+}
+
+.menu ul {
+  width: 60%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-center;
+}
+
+.menu ul > li {
+  list-style: none;
 }
