--- a/style.css
+++ b/style.css
@@ -96,8 +96,18 @@ a:hover, a:focus {
   align-items: flex-center;
 }
 
-.menu ul > li {
+ li {
   list-style: none;
+}
+
+.section {
+  margin: 30px 0;
+  padding: 15px;
+  border-bottom: 1px dashed #FFD540;
+}
+
+p {
+  margin-top: 15px;
 }
 
 .profile {
