--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ a:hover, a:focus {
 }
 
 .menu .title {
-  min-width: 450px;
+  font-size: 24px;
+  min-width: 350px;
   text-align: left;
   margin: 0;
   border-right: 2px dashed #FFD540
