--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover, a:focus {
   font-size: 24px;
   min-width: 350px;
   text-align: left;
-  margin: 0;
+  margin-bottom: 15px;
   border-right: 2px dashed #FFD540
 }
 
@@ -151,10 +151,15 @@ p {
     width: 100%;
 }
 
+* + * {
+  margin-top: 15px;
+}
+
 .projects > li {
     border: 2px solid #FFD540;
     flex-grow: 1;
     max-width: 45%;
+    min-width: 300px;
 }
 
 .project-title {
