--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover, a:focus {
   font-size: 24px;
   min-width: 350px;
   text-align: left;
-  margin-bottom: 15px;
+  padding: 20px 0;
   border-right: 2px dashed #FFD540
 }
 
@@ -95,6 +95,10 @@ a:hover, a:focus {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-center;
+}
+
+.menu ul > li {
+  margin: 15px 0
 }
 
  li {
@@ -151,7 +155,7 @@ p {
     width: 100%;
 }
 
-* + * {
+.links > * + * {
   margin-top: 15px;
 }
 
